src/modules/ft/data_provider/snapshots/near_enhanced_api__modules__ft__data_provider__balance__tests__ft_balances_by_contract_other_contract_deployed.snap
---
source: src/modules/ft/data_provider/balance.rs
expression: balance
---
Err(
    Error {
        code: 400,
        message: "Invalid Input: The account `comic.paras.near` does not implement any suitable contract at block 80500000",
        retriable: false,
    },
)
